Fix minor alignment issues
* Increase mobile gutter to 32px
* Decrease content container width to 608px
* Add letter spacing of 0.05em
* Increase padding of button
* Make margins of content box equal
* Left align content (design convention to avoid rivers)
* Add border radius to me.jpeg
* Shrink tech logos
* Add shadow to theme switch

--- a/src/components/button/index.sass
+++ b/src/components/button/index.sass
@@ -7,7 +7,7 @@
   border-radius: 2px
   font-weight: bold
   letter-spacing: 4px
-  padding: 1em 0.8em
+  padding: 0.75em 1.5em
   text-align: center
   text-decoration: none
   text-transform: uppercase !important
