--- a/src/components/content-box/index.sass
+++ b/src/components/content-box/index.sass
@@ -15,7 +15,6 @@
   @include theme.which-theme('color', 'content')
   @include transition.transition(consts.$transition-duration, color)
   line-height: 24px
-  text-align: justify
 
   a
     @include theme.which-theme('color', 'content-link')
