--- a/src/components/content/index.sass
+++ b/src/components/content/index.sass
@@ -3,13 +3,7 @@
 .experience
   margin-top: 6.75em
 
-.tech-skills
-  margin-top: 3.75em
-
-.not-tech-skills
-  margin-top: 6em
-
-.project-request
+.tech-skills, .not-tech-skills, .project-request
   margin-top: 6em
 
 .button-container
