--- a/src/components/cover/index.sass
+++ b/src/components/cover/index.sass
@@ -24,6 +24,7 @@ $margin-error: 20px
 
 .image-cropper
   align-items: center
+  border-radius: 4px
   display: flex
   flex-shrink: 0 // By default, Chrome sets flex-shrink to 1 (:face-palm:)
   height: #{$side}px
