--- a/src/components/skills/index.sass
+++ b/src/components/skills/index.sass
@@ -9,5 +9,5 @@
 .icon
   @include theme.which-theme('fill', 'icon-colour')
   @include transition.transition(consts.$transition-duration, all)
-  height: 44px
+  height: 36px
   margin-right: 2em
