--- a/src/components/theme-switch/index.sass
+++ b/src/components/theme-switch/index.sass
@@ -16,6 +16,7 @@ $thumb-size: $toggle-height - ($thumb-margin * 2)
   border-bottom-right-radius: $toggle-height * 0.5
   border-top-left-radius: $toggle-height * 0.5
   border-top-right-radius: $toggle-height * 0.5
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1)
   display: flex
   height: $toggle-height
   width: $toggle-width
