--- a/src/consts.sass
+++ b/src/consts.sass
@@ -9,7 +9,7 @@ $tablet: 992px
 $desktop: 1200px
 
 /* Mobile device variables */
-$mobile-gutter: 0 1em
+$mobile-gutter: 0 2em
 
 /* Small monitor variables */
 // Gutter factor calculated according to Semantic UI
@@ -35,5 +35,5 @@ $large-min-gutter: $base-size * 2.3
 $large-monitor-width: $desktop - ($desktop-min-gutter * 2)
 $large-monitor-gutter: 0 auto
 // For content container
-$large-content-gutter: $base-size * 16
+$large-content-gutter: $base-size * 18.5
 $large-content-width: $desktop - ($large-content-gutter * 2)
