--- a/src/index.sass
+++ b/src/index.sass
@@ -8,3 +8,4 @@
 // hashed by webpack.
 @at-root html, body, :global(#root)
   font-size: 16px
+  letter-spacing: 0.05em
